<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20sp"
    android:background="@color/paleTurquoise"
    android:orientation="vertical" >
	<TextView 
	    style="@style/Title.Medium.Bold"
	    android:text="@string/activityButton3Label"
	    />
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_height="wrap_content" 
	    android:layout_width="fill_parent"
	    android:padding="15sp" 
	    android:orientation="vertical">        
        <TextView	        
            style="@style/Text.Black.Medium"
            android:text="@string/quadrant11Text" />	        
        <TextView	        
            style="@style/Text.Black.Medium"
            android:text="@string/quadrant12Text" />
        <TextView	        
            style="@style/Text.Black.Medium"
            android:text="@string/quadrant13Text" />	 
            <TextView	        
            style="@style/Text.Black.Medium"
            android:text="@string/quadrant14Text" />	 
            <TextView	        
            style="@style/Text.Black.Medium"
            android:text="@string/quadrant15Text" />	 	        
	</LinearLayout>

</LinearLayout>